--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="container">
         <!-- navbar starts -->
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
@@ -42,7 +42,107 @@
             </div>
         </nav>
         <!-- navbar ends -->
+        <!-- slider starts -->
+        <section class="mt-5">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active border rounded bg-info p-5 ">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center">
+                                <div>
+                                    <h2>Cool Dude Headphone</h2>
+                                    <p>This is the best headphonne in the world for those who just want to waste time
+                                    </p>
+                                    <h1>$420</h1>
+                                    <div class="btn btn-warning">Buy Now</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item active border rounded bg-info p-5 ">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center">
+                                <div>
+                                    <h2>Mega TV LCD for sports</h2>
+                                    <p>This is the best tv in the world for those who just want to waste time
+                                    </p>
+                                    <h1>$1200</h1>
+                                    <div class="btn btn-warning">Buy Now</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item active border rounded bg-info p-5 ">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center">
+                                <div>
+                                    <h2>X-Box for your living room</h2>
+                                    <p>This is the best x-box in the world for those who just want to waste time
+                                    </p>
+                                    <h1>$600</h1>
+                                    <div class="btn btn-warning">Buy Now</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <!-- slider ends -->
     </header>
+    <main>
+        <!-- catagories starts -->
+        <section>
+            <div class="container text-center my-5">
+                <div class="row g-2">
+                    <!-- single catagory -->
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-warning rounded-3 d-flex align-items-center justify-content-around">
+                            <h1 class="text-white">Watch</h1>
+                            <img src="images/categories/watch.png" alt="">
+                        </div>
+                    </div>
+                    <!-- single catagory -->
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-success rounded-3 d-flex align-items-center justify-content-around">
+                            <h1 class="text-white">Bag</h1>
+                            <img src="images/categories/bag.png" alt="">
+                        </div>
+                    </div>
+                    <!-- single catagory -->
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-primary rounded-3 d-flex align-items-center justify-content-around">
+                            <h1 class="text-white">Shoes</h1>
+                            <img src="images/categories/shoes.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- catagories ends -->
+
+
+    </main>
 
 
 
