--- a/index3.html
+++ b/index3.html
@@ -14,37 +14,62 @@
 
 <body>
     <header>
-        <!-- navbar starts -->
-        <nav class="navbar navbar-expand-lg fixed-top">
-            <div class="container">
-                <a class="navbar-brand" href="#">
-                    <img class="logo" src="icons/Logo.png" alt="">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Product</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
-                    </ul>
+        <section>
+            <!-- navbar starts -->
+            <nav class="navbar navbar-expand-lg fixed-top">
+                <div class="container">
+                    <a class="navbar-brand" href="#">
+                        <img class="logo" src="icons/Logo.png" alt="">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Product</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </section>
+        <!-- banner section -->
+        <section class="container text-center ">
+            <div class="row d-flex  align-items-center py-5 ">
+                <div class="col-lg-5">
+                    <img class="img-fluid" src="images/Group 33092.png" alt="">
+                </div>
+                <div class="col-lg-7 px-5">
+                    <div">
+                        <h2 class="color-text"><span class="orange-color"></span>NIKE REACT<span
+                                class="dark-blue-color"><br>INFINITY
+                                RUN</span></h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, architecto!</p>
+                        <button class="nike-btn-buy-now btn btn-primary">Buy Now</button>
                 </div>
             </div>
-        </nav>
+            </div>
+        </section>
         <!-- navbar ends -->
+
     </header>
+    <main>
+        <section>
+
+        </section>
+    </main>
 
 
     <!-- bootstrap js link -->
