--- a/index3.html
+++ b/index3.html
@@ -53,9 +53,9 @@
                 </div>
                 <div class="col-lg-7 px-5">
                     <div">
-                        <h2 class="color-text"><span class="orange-color"></span>NIKE REACT<span
-                                class="dark-blue-color"><br>INFINITY
-                                RUN</span></h2>
+                        <h2 class="colored-text"><span class="orange-color">NIKE REACT</span><span
+                                class="dark-blue-color"><br>
+                                INFINITY RUN</span></h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, architecto!</p>
                         <button class="nike-btn-buy-now btn btn-primary">Buy Now</button>
                 </div>
